--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Research Gorkha</title>
   <link rel="icon" href="didi_logo.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  <!-- ✅ Google AdSense Loader Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2109633591337486"
+    crossorigin="anonymous"></script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -274,6 +279,16 @@
   <section class="section ads">
     <h3>📢 Advertise With Us</h3>
     <p>Reach thousands of people in Gorkha and beyond. Email us for details.</p>
+
+    <!-- ✅ Google AdSense Ad Unit -->
+    <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-client="ca-pub-2109633591337486"
+      data-ad-slot="YOUR-AD-SLOT-ID"
+      data-ad-format="auto"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </section>
 
   <footer>
